--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
     "bootstrap": "^4.5.0",
+    "i": "^0.3.6",
     "jquery": "^3.5.1",
+    "npm": "^6.14.5",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
